--- a/src/components/Buttons/Button.module.scss
+++ b/src/components/Buttons/Button.module.scss
@@ -1,19 +1,14 @@
 .button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   border: none;
-  border-radius: 15px;
+  border-radius: 8px;
   cursor: pointer;
-  font-weight: 600;
-  transition: all 0.2s;
-
-  &:disabled {
-    opacity: 0.5;
-    cursor: not-allowed;
-  }
 }
 
-// Sizes
 .button--small {
-  padding: 8px 16px;
+  padding: 5px 10px;
   font-size: 1rem;
 }
 
@@ -27,7 +22,6 @@
   font-size: 2.5rem;
 }
 
-// Colors
 .button--blue {
   background-color: #007bff;
   color: white;
